--- a/readTodos.html
+++ b/readTodos.html
@@ -6,7 +6,19 @@
 </head>
 
 <body>
-    <div id="todoTasks">todo tasks</div>
+    <div id="todoTasks">todo tasks
+        <div class="todoTask">
+            <div class="title">buy eggs</div>
+            <div class="date">5-1-2018</div>
+            <div class="description">buy a dozen eggs from...</div>
+            <div class="controls">
+                <span>done?</span>
+                <input type="checkbox" name="complete">
+                <button>delete</button>
+            </div>
+
+        </div>
+    </div>
     <div id="userMetaData">
         <div id="userSection">Avatar</div>
         meta data
