added skeleton to the tasklist

--- a/readTodos.html
+++ b/readTodos.html
@@ -16,7 +16,26 @@
                 <input type="checkbox" name="complete">
                 <button>delete</button>
             </div>
-
+        </div>
+        <div class="todoTask">
+            <div class="title">buy soap</div>
+            <div class="date">5-1-2018</div>
+            <div class="description">dozen box of soap...</div>
+            <div class="controls">
+                <span>done?</span>
+                <input type="checkbox" name="complete">
+                <button>delete</button>
+            </div>
+        </div>
+        <div class="todoTask">
+            <div class="title">go to post office</div>
+            <div class="date">5-1-2018</div>
+            <div class="description">drop off mail, buy stamp...</div>
+            <div class="controls">
+                <span>done?</span>
+                <input type="checkbox" name="complete">
+                <button>delete</button>
+            </div>
         </div>
     </div>
     <div id="userMetaData">
