add dom creation for the tasks

--- a/readTodos.html
+++ b/readTodos.html
@@ -1,41 +1,14 @@
 <!DOCTYPE html>
+
 <head>
     <title></title>
     <link rel="stylesheet" href="includes/style.css">
+    <script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous"></script>
+    <script type="text/javascript" src="includes/main.js"></script>
 </head>
 
 <body>
-    <div id="todoTasks">todo tasks
-        <div class="todoTask">
-            <div class="title">buy eggs</div>
-            <div class="date">5-1-2018</div>
-            <div class="description">buy a dozen eggs from...</div>
-            <div class="controls">
-                <span>done?</span>
-                <input type="checkbox" name="complete">
-                <button>delete</button>
-            </div>
-        </div>
-        <div class="todoTask">
-            <div class="title">buy soap</div>
-            <div class="date">5-1-2018</div>
-            <div class="description">dozen box of soap...</div>
-            <div class="controls">
-                <span>done?</span>
-                <input type="checkbox" name="complete">
-                <button>delete</button>
-            </div>
-        </div>
-        <div class="todoTask">
-            <div class="title">go to post office</div>
-            <div class="date">5-1-2018</div>
-            <div class="description">drop off mail, buy stamp...</div>
-            <div class="controls">
-                <span>done?</span>
-                <input type="checkbox" name="complete">
-                <button>delete</button>
-            </div>
-        </div>
+    <div id="todoTasks">
     </div>
     <div id="userMetaData">
         <div id="userSection">Avatar</div>
